styles.css
/* ... */
nav ul {
    list-style: none;
    padding-top: 15px;
}

nav li {
    margin-bottom: 1em;
    margin-right: 1em;
}

nav a {
    color: var(--neutral);
    text-decoration: none;
    font-family: 'open sans';
    font-size: 1.5rem;
    text-transform: uppercase;    
    transition: all 0.5s ease;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover {
    color: var(--primary);
}

.nav-toggle {
    display: none;
}

.nav-toggle:checked ~ nav {
    background-color: var(--black);
    transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a{
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}

.nav-toggle:checked ~ nav a:hover {
    transform-origin: center;
    transition: 250ms ease-in-out;
}

.nav-toggle-label {
    justify-self: flex-start;
    top: 0;
    left: 0;
    height: 100%;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: var(--primary);
    height: 2px;
    width: 2em;
    border-radius: 2px;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 50px;
}

.nav-toggle-label span::after {
    top: 50px;
}



/* Responsiveness for Navigation */

@media screen and (min-width: 910px) {
    .nav-toggle-label {
        display: none;
    }

    header {
        justify-content: space-between;
        flex-direction: row;
    }

    nav {
        all: unset;
        grid-column: 3 / 4;
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }

    nav ul {
        display: flex;
    }

    nav li {
        margin-bottom: 0;
    }

    nav a {
        opacity: 1;
        position: relative;
        font-size: .94rem;
    }

    nav a:hover {
        color: var(--primary);
        transform-origin: center;
        transition: 250ms ease-in-out;
    }

    nav a::before {
        content: '';
        display: block;
        height: 3px;
        background-color: var(--secondary);
        position: absolute;
        top: -.5em;
        left: 0;
        right: 0;
        transform: scale(0, 1);
        transition: transform ease-in-out 250ms;
    }

    nav a:hover::before {
        transform: scale(1, 1);
    }
} 

/* Hero Section CSS */

.main {
    background-color: var(--dark-two);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 6rem 2rem 2rem;
}

.main > * {
    flex: 1 1 50%;
}

.main-content {
    padding-right: .5rem;
    padding-bottom: 1rem;
}

.main h1 {
    font-size: 3.5rem;
    font-weight: 500;
    text-transform: uppercase;
    background-image: linear-gradient(to bottom, var(--primary) 0%, var(--secondary) 33%, var(--primary) 66%, var(--secondary));
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.main p {
    color: var(--neutral);
    font-family: 'open sans';
    font-size: 1.25rem;
    font-weight: 100;
}

.main-btn {
    background-image: linear-gradient(to top, var(--secondary) 0%, var(--primary) 100%);
    padding: 1.25rem 2.5rem;
    border: none;
    border-radius: .5rem;
    margin-top: 2rem;
    cursor: pointer;
    position: relative;
    transition: 0.3s ease-in-out;
}

.main-btn a {
    background: transparent;
    position: relative;
    z-index: 2;
    font-size: 1rem;
    color: var(--dark-two);
    text-decoration: none;
}

.main-btn:hover {
    box-shadow: 0 0 5px 1px var(--primary);
    transition: 0.3s ease-in;
}

.main-img-container {
    text-align: center;
}

.main-img-container img {
    height: 100%;
    width: 100%;
    min-width: 20rem;
}

#main-img {
    width: 100%;
    box-shadow: 1rem 1rem var(--primary);
    margin-left: -8px;
}

/* Intro Section CSS */

.intro {
    background-color: var(--black);
}

.intro-container {
    display: flex;
    flex-wrap: wrap-reverse;
}

.intro-container > * {
    flex: 1 1 50%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.intro-img {
    width: 100%;
    min-width: 25rem;
    max-width: 40rem;
    padding-top: 1rem;
}

.intro-text {
    padding-inline: 2rem;
    line-height: 1.5rem;
}

.intro-text h2 {
    padding-bottom: 1rem;
}



/* Why Us Section CSS */

.why-us {
    background-color: var(--black);
    width: 100%;
}

.why-us-content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 1rem;
}

.why-us-text h2 {
    background-image: linear-gradient(to top, var(--secondary) 0%, var(--primary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    font-size: 1.75rem;
    line-height: 1.5rem;
    font-weight: 600;
}

.why-us-text p {
    font-family: 'open sans';
    padding-top: 1rem;
    font-size: 1rem;
    line-height: 1.5rem;
}

.why-us-text ul {
  list-style: none; 
  padding: .5rem; 
}

.why-us-text ul li {
    font-family: 'open sans';
}

.why-us-text ul li::before {
    content: '✓ ';
    color: var(--primary);
}

/* Services section CSS */

.services {
    color: #E8E9F3;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.services-title {
    width: 100%;
}

.services h1 {
    background-color: var(--secondary);
    background-image: linear-gradient(to bottom, var(--primary) 20%, var(--secondary) 50%, var(--dark) 100%);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    background-size: 100%;
    margin-bottom: 2rem;
    font-size: 2.5rem;
    font-weight: 400;
    text-align: center;
}

.services-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
/* ... */

